further commit to Sune’s equal tikzsetting

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -438,9 +438,9 @@ A slightly different twist on this set-up leads to a new story entirely.  Recall
 Let $A$ be a $\Z$--flat ring, let $\G$ be a formal group over $A$, and let $x$ be a coordinate on $\G$.  Set $K = A \otimes \Q$, so that $A \to K$ is an injection.  There is then a diagram of exact rows \todo{question: so here, the point is that you are restricting to integrals with no constant term, and that is the same as taking the quotient of the actual differentials, since the map $A\ps{x} -> \Omega^1_{A\ps{x}/A}$ is injective on that submodule? AY}
 \begin{center}
 \begin{tikzcd}[column sep=0.5em]
-0 \arrow{r} & \left\{\begin{array}{c}\text{integrals with} \\ \text{$A$ coefficients}\end{array}\right\} \arrow{r} \arrow[-,equal]{d} & \{\text{all conceivable integrals}\} \arrow{r} \arrow[-,equal]{d} & \{\text{missing integrals}\} \arrow{r} \arrow[-,equal]{d} & 0 \\
+0 \arrow{r} & \left\{\begin{array}{c}\text{integrals with} \\ \text{$A$ coefficients}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \{\text{all conceivable integrals}\} \arrow{r} \arrow[equal]{d} & \{\text{missing integrals}\} \arrow{r} \arrow[equal]{d} & 0 \\
 0 \arrow{r} & x A\ps{x} \arrow{r} & \left\{ f \in x K\ps{x} \middle| f' \in A\ps{x} \right\} \arrow{r}{d} & H^1_{dR}(\G/A) \arrow{r} & 0 \\
-0 \arrow{r} & x A\ps{x} \arrow{r} \arrow[-,equal]{u} & \left\{ f \in x K\ps{x} \middle| \begin{array}{c}f' \in A\ps{x}, \\ \delta f \in A\ps{x,y} \end{array} \right\} \arrow{u} \arrow{r}{d} & D(\G/A) \arrow{r} \arrow{u} & 0,
+0 \arrow{r} & x A\ps{x} \arrow{r} \arrow[equal]{u} & \left\{ f \in x K\ps{x} \middle| \begin{array}{c}f' \in A\ps{x}, \\ \delta f \in A\ps{x,y} \end{array} \right\} \arrow{u} \arrow{r}{d} & D(\G/A) \arrow{r} \arrow{u} & 0,
 \end{tikzcd}
 \end{center}
 where $\delta$ is induced by $\delta [\omega] = (\mu^* - \pi_1^* - \pi_2^*)[\omega]$.
@@ -677,7 +677,7 @@ There is a natural onto map $B(n)_n X \to H_n X$. \qed
 % since $H_* \Loops^\infty X$ is already an unstable module and $\Loops^\infty H_* X$ has no multiplicative structure.  This factored map is adjoint to a map \[H_* \Loops^\infty X \to U \Loops^\infty H_* X\] to which we can apply $D_n$:
 % \begin{center}
 % \begin{tikzcd}
-% D_n H_* \Loops^\infty X \arrow[-,equal]{d} \arrow["(4)"]{r} & D_n U \Loops^\infty H_* X \arrow[-,equal]{d} \\
+% D_n H_* \Loops^\infty X \arrow[equal]{d} \arrow["(4)"]{r} & D_n U \Loops^\infty H_* X \arrow[equal]{d} \\
 % B(n)_n X & {[\Loops^\infty H_* X]_n} \arrow["(2)","{\text{incl.}}"']{r} & H_n X.
 % \end{tikzcd}
 % \end{center}
@@ -761,7 +761,7 @@ To see this, note that because $E_{2n-2k-1} B(2n) \to D_{2n} H_* \OS{E}{2k+1}$ i
 % For $f\co A \to B$ a map of spectra, we write $f_\sharp = D_n \Loops^\infty f_*$.  Our goal is to prove exactness, so for $y \in D_n H_* \Loops^\infty Y$ with $q_\sharp(y) = 0$ we must produce $x \in D_n H_* \Loops^\infty X$ with $i_\sharp(x) = y$.  Define $y_s \in D_n H_* \Loops^\infty Y_s$ by projection, and we will produce $x_s \in D_n H_* \Loops^\infty X_s$ with $(i_s)_\sharp(x_s) = y_s$, $(r_s)_\sharp x_{s+1} = x_s$.  Then, since $D_n H_* K(G_s, s) = 0$ for $s \gg 0$, the result will follow from
 % \begin{center}
 % \begin{tikzcd}
-% D_n H_* \Loops^\infty X \arrow{r}{i_\sharp} \arrow[-,equal]{d} & D_n H_* \Loops^\infty Y \arrow[-,equal]{d} \\
+% D_n H_* \Loops^\infty X \arrow{r}{i_\sharp} \arrow[equal]{d} & D_n H_* \Loops^\infty Y \arrow[equal]{d} \\
 % \lim_s D_n H_* \Loops^\infty X_s \arrow{r} & \lim_s D_n H_* \Loops^\infty Y_s.
 % \end{tikzcd}
 % \end{center}
@@ -804,7 +804,7 @@ There is an isomorphism \[BS^1[p^j]_K \cong BS^1_K[p^j].\] \todo{I'm a little co
 Consider the diagram of spherical fibrations:\todo{Put in a pullback corner here.}
 \begin{center}
 \begin{tikzcd}
-S^1 \arrow{r} \arrow[-,equal]{d} & B(S^1[p^j]) \arrow{r} \arrow{d} & BS^1 \arrow{d}{p^j} \\
+S^1 \arrow{r} \arrow[equal]{d} & B(S^1[p^j]) \arrow{r} \arrow{d} & BS^1 \arrow{d}{p^j} \\
 S^1 \arrow{r} & ES^1 \arrow{r} & BS^1.
 \end{tikzcd}
 \end{center}
