--- a/quillen.tex
+++ b/quillen.tex
@@ -46,7 +46,7 @@ These ind-systems arise when studying completions of rings.  To address the geom
 Let $X$ be an affine formal scheme\todo{I'm guessing this means isomorphic to the constant ind-system $\{\Spec R\}$?}, and pick a chart $\Spec R \to X$.  A subscheme $Y \subseteq X$ is called \textit{closed} when it has the form
 \begin{center}
 \begin{tikzcd}
-Y \arrow{r} \arrow[-,equal,densely dotted]{d} & X \arrow[-,equal]{d} \\
+Y \arrow{r} \arrow[-,equal,densely dotted]{d} & X \arrow[equal]{d} \\
 \Spec (R/I) \arrow{r} & \Spec R.
 \end{tikzcd}
 \end{center}
@@ -87,7 +87,7 @@ There is an isomorphism \[TV \cong \CatOf{Modules}_R(T^* V, R).\]
 A point $f \in V(R[\eps] / \eps^2)$ is given by a map $f\co \sheaf O_V \to R[\eps] / \eps^2$.  If $f$ is pointed, then it carries the ideal $I(0)$ of functions vanishing at zero to the ideal $(\eps)$, and hence also carries $I(0)^2$ to $(\eps)^2 = 0$.  Hence, $f$ induces a map
 \begin{center}
 \begin{tikzcd}
-I(0) / I(0)^2 \arrow{r}{f} \arrow[-,equal]{d} & (\eps) / (\eps)^2 \arrow[-,equal]{d} \\
+I(0) / I(0)^2 \arrow{r}{f} \arrow[equal]{d} & (\eps) / (\eps)^2 \arrow[equal]{d} \\
 T^* V \arrow{r}{f} & R,
 \end{tikzcd}
 \end{center}
@@ -134,7 +134,7 @@ The induced map $T\sigma$ on tangent spaces is evidently invertible, so by \Cref
 Let $\G$ be a formal group.  In the presence of a coordinate $\phi \co \G \cong \A^n$, the addition law on $\G$ begets a map
 \begin{center}
 \begin{tikzcd}
-\G \times \G \arrow{r} \arrow[-,equal]{d} & \G \arrow[-,equal]{d} \\
+\G \times \G \arrow{r} \arrow[equal]{d} & \G \arrow[equal]{d} \\
 \A^n \times \A^n \arrow{r} & \A^n,
 \end{tikzcd} \todo{Again, the vertical arrows should be arrows, not equal signs?}
 \end{center}
@@ -367,11 +367,11 @@ Take $E$ to be complex-oriented.  The $E$--cohomology of $\P(\xi)$ is given by t
 We fit all of the fibrations we have into a single diagram:
 \begin{center}
 \begin{tikzcd}
-& \C^\times \arrow[-,equal]{dd} \arrow{rd} \\
-\C^n \arrow{dd} & & \C^n \setminus \{0\} \arrow[crossing over]{ll} \arrow{r} \arrow{dd} & \CP^{n-1} \arrow{r} \arrow{dd} & \CP^\infty \arrow[-,equal]{dd} \\
+& \C^\times \arrow[equal]{dd} \arrow{rd} \\
+\C^n \arrow{dd} & & \C^n \setminus \{0\} \arrow[crossing over]{ll} \arrow{r} \arrow{dd} & \CP^{n-1} \arrow{r} \arrow{dd} & \CP^\infty \arrow[equal]{dd} \\
 & \C^\times \arrow{rd} \\
 \xi \arrow{d} & & \xi \setminus \zeta \arrow{ll} \arrow{r} \arrow{d} & \P(\xi) \arrow{r} \arrow{d}{\pi} & \CP^\infty \arrow{d} \\
-X \arrow[-,equal]{rr} \arrow[bend left, densely dotted]{u}{\zeta} & & X \arrow[-,equal]{r} & X \arrow{r} & *.
+X \arrow[equal]{rr} \arrow[bend left, densely dotted]{u}{\zeta} & & X \arrow[equal]{r} & X \arrow{r} & *.
 \end{tikzcd}
 \end{center}
 We read this diagram as follows: on the far left, there's the vector bundle we began with, as well as its zero-section $\zeta$.  Deleting the zero-section gives the second bundle, a $\C^n \setminus \{0\}$--bundle over $X$.  Its quotient by the scaling $\C^\times$--action gives the third bundle, a $\CP^{n-1}$--bundle over $X$.  Additionally, the quotient map $\C^n \setminus \{0\} \to \CP^{n-1}$ is itself a $\C^\times$--bundle, and this induces the structure of a $\C^\times$--bundle on the quotient map $\xi \setminus \zeta \to \P(\xi)$.  Thinking of these as complex line bundles, they are classified by a map to $\CP^\infty$, which can itself be thought of as the last vertical fibration, fibering over a point.
@@ -427,7 +427,7 @@ What's most remarkable about the description in this theorem is its coherence wi
 The sum map \[BU(n) \times BU(m) \xrightarrow\oplus BU(n+m)\] induces on Chern polynomials the identity \[c(\xi \oplus \zeta) = c(\xi) \cdot c(\zeta).\]  In terms of divisors, \[\P(\xi \oplus \zeta)_E = \P(\xi)_E \sqcup \P(\zeta)_E,\] and hence there is an induced square
 \begin{center}
 \begin{tikzcd}
-BU(n)_E \times BU(m)_E \arrow{r}{\oplus} \arrow[-,equal]{d} & BU(n+m) \arrow[-,equal]{d} \\
+BU(n)_E \times BU(m)_E \arrow{r}{\oplus} \arrow[equal]{d} & BU(n+m) \arrow[equal]{d} \\
 \Div_n^+ \CP^\infty_E \times \Div_m^+ \CP^\infty_E \arrow{r}{\sqcup} & \Div_{n+m}^+ \CP^\infty_E. \qed
 \end{tikzcd}
 \end{center}
@@ -449,7 +449,7 @@ There are natural isomorphisms $BU_E \cong \Div_0 \CP^\infty_E$ and $(BU \times 
 There is a commutative diagram
 \begin{center}
 \begin{tikzcd}
-BU(n)_E \times BU(m)_E \arrow{r}{\otimes} \arrow[-,equal]{d} & BU(nm)_E \arrow[-,equal]{d} \\
+BU(n)_E \times BU(m)_E \arrow{r}{\otimes} \arrow[equal]{d} & BU(nm)_E \arrow[equal]{d} \\
 \Div_n^+ \CP^\infty_E \times \Div_m^+ \CP^\infty_E \arrow{r}{\cdot} & \Div_{nm}^+ \CP^\infty_E,
 \end{tikzcd}
 \end{center}
