--- a/finite.tex
+++ b/finite.tex
@@ -309,8 +309,8 @@ Our first goal for today is to outline a program for the rest of this Case Study
 With this in mind, given a map $f$ in the diagram\todo{The bottom of COCTALOS page 68 has a better interpretation of what picking a formal group law has to do with anything, I think.}
 \begin{center}
 \begin{tikzcd}
-\Spec R \arrow{r}{f} & \moduli{fgl} \arrow[-,equal]{r} \arrow{d} & \context{MUP}[0] \arrow{d} \arrow[-,equal]{r} & \Spec MUP_0 \\
-& \moduli{fg} \arrow[-,equal]{r} \arrow[leftarrow]{lu} & \context{MUP},
+\Spec R \arrow{r}{f} & \moduli{fgl} \arrow[equal]{r} \arrow{d} & \context{MUP}[0] \arrow{d} \arrow[equal]{r} & \Spec MUP_0 \\
+& \moduli{fg} \arrow[equal]{r} \arrow[leftarrow]{lu} & \context{MUP},
 \end{tikzcd}
 \end{center}\todo{please check the P's, 0's, and labels of arrows? I tried to fudge around with it since it looked funny but I want to make sure I didn't mess anything up, AY.}
 life would be easiest if the $R$--module determined by $f^* \context{MUP}(X)$ were itself the value of a homology theory $R_0(X) = MUP_0 X \otimes_{MUP_0} R$\todo{should this (and the one later) be $R(X)$ and not $R_0$? For example when $R=MUP_0$}.  After all, the pullback of some arbitrary sheaf along some arbitrary map has no special behavior, but homology functors do have familiar special behaviors which we could hope to exploit.  Generally, this is unreasonable to expect: homology theories are functors which convert cofiber sequences of spectra to long exact sequences of groups, but base--change from $\moduli{fg}$ to $\Spec R$ preserves exact sequences exactly when the diagonal arrow is \textit{flat}.  In that case, this gives the following theorem:
@@ -884,7 +884,7 @@ A $p$--local finite spectrum is $K(d-1)$--acyclic exactly when it admits a $v_d$
 Given the classification of thick subcategories, if a property is closed under thickness then one need only exhibit a single spectrum with the property to know that all the spectra in the thick subcategory it generates also all have that property.  Inductively, they manually construct finite spectra $M_0(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}})$ for sufficiently large indices $i_*$ which admit a self-map $v$ governed by a commuting square
 \begin{center}
 \begin{tikzcd}
-BP_* M_{|v_d| i_d}(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow{r}{v} \arrow[-,equal]{d} & BP_* M_0(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow[-,equal]{d} \\
+BP_* M_{|v_d| i_d}(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow{r}{v} \arrow[equal]{d} & BP_* M_0(p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow[equal]{d} \\
 \Susp^{|v_d| i_d} BP_* / (p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}) \arrow{r}{- \cdot v_d^{i_d}} & BP_* / (p^{i_0}, v_1^{i_1}, \ldots, v_{d-1}^{i_{d-1}}).
 \end{tikzcd}
 \end{center}
@@ -1003,7 +1003,7 @@ Analogous to ``1.'' above, there is a natural equivalence \[M_d X \simeq \colim_
 It is possible to draw the chromatic fracture square and the definition of $M_d$ in the same diagram:
 \begin{center}
 \begin{tikzcd}
-M_d X \arrow{d} \arrow[-,equal]{r} & M_d X \arrow{d} \\
+M_d X \arrow{d} \arrow[equal]{r} & M_d X \arrow{d} \\
 L_d X \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \widehat L_d X \arrow{d} \\
 L_{d-1} X \arrow{r} & L_{d-1} \widehat L_d X.
 \end{tikzcd}
@@ -1011,7 +1011,7 @@ L_{d-1} X \arrow{r} & L_{d-1} \widehat L_d X.
 From this, we see that there is a fiber sequence \[M_d X \to \widehat L_d X \to L_{d-1} \widehat L_d X.\]  The case $d = 1$ gives the prototypical example of the difference between these two presentations of the ``exact height $d$ data'', where the sequence becomes: \[\colim_j (M^0(p^j) \sm L_1 X) \to \lim_j (M_0(p^j) \sm L_1 X) \to \left( \lim_j (M_0(p^j) \sm L_1 X) \right)_{\Q}.\]  If, for instance, $\pi_0 L_1 X = \Z_{(p)}$, then the long exact sequence of homotopy groups associated to this fiber sequence gives
 \begin{center}
 \begin{tikzcd}
-\pi_0 \widehat L_1 X \arrow{r} \arrow[-,equal]{d} & \pi_0 L_0 \widehat L_1 X \arrow{r} \arrow[-,equal]{d} & \pi_{-1} M_1 X \arrow[-,equal]{d} \\
+\pi_0 \widehat L_1 X \arrow{r} \arrow[equal]{d} & \pi_0 L_0 \widehat L_1 X \arrow{r} \arrow[equal]{d} & \pi_{-1} M_1 X \arrow[equal]{d} \\
 \Z^\wedge_p \arrow{r} & \Q_p \arrow{r} & \Z/p^\infty.
 \end{tikzcd}
 \end{center}
